Fix create/edit button overflowing on other icons

--- a/app/assets/stylesheets/common/base/compose.scss
+++ b/app/assets/stylesheets/common/base/compose.scss
@@ -340,7 +340,7 @@ html.composer-open {
     flex: 1 1 auto;
 
     .btn-primary {
-      flex: 0 0 auto;
+      flex: 0 1 auto;
     }
 
     .cancel {
